services/rundeck/deployment-minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rundeck-minio
  namespace: services
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: rundeck-minio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rundeck-minio
    spec:
      volumes:
      - name: rundeck-minio-storage
        persistentVolumeClaim:
          claimName: rundeck-minio-storage-claim
      containers:
      - name: rundeck-minio
        image: minio/minio:RELEASE.2025-05-24T17-08-30Z
        args:
        - server
        - /data
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: rundeck-minio-storage
          mountPath: "/data"
