services/rundeck/deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rundeck-mysql
  namespace: services
  labels:
    app: rundeck-mysql
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rundeck-mysql
  template:
    metadata:
      labels:
        app: rundeck-mysql
    spec:
      containers:
      - image: mysql:5.7
        args:
        - "--ignore-db-dir=lost+found"
        name: rundeck-mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: rundeck-mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: rundeck-mysql-storage
        persistentVolumeClaim:
          claimName: rundeck-mysql-storage-claim
