services/rundeck/deployment-rundeck-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rundeck
  namespace: services
  labels:
    app: rundeck
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rundeck
  template:
    metadata:
      labels:
        app: rundeck
    spec:
      containers:
      - name: rundeck
        image: rundeck/rundeck:5.11.1
        volumeMounts:
          - mountPath: /home/rundeck/etc/admin-role.aclpolicy
            name: acl
            subPath: admin-role.aclpolicy
        lifecycle:
          postStart:
            exec:
              command: 
                - "/bin/sh"
                - "-c"
                - "curl -Lo /home/rundeck/libext/http-step-1.1.6.jar https://github.com/rundeck-plugins/http-step/releases/download/1.1.6/http-step-1.1.6.jar ;"
        ports:
        - containerPort: 4440
        livenessProbe:
          httpGet:
            path: /
            port: 4440
            scheme: HTTP
          initialDelaySeconds: 500
          periodSeconds: 120
        readinessProbe:
          httpGet:
            path: /
            port: 4440
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
      volumes:
      - name: acl
        secret:
          secretName: rundeck-admin-acl
          items:
          - key: admin-role.aclpolicy
            path: admin-role.aclpolicy
