services/rundeck/ingress-test.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rundeck-ingress
  namespace: services
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: https://rundeck.test.local.hohepa.dev/project/homelab/jobs
    gethomepage.dev/group: Services
    gethomepage.dev/name: Rundeck
    gethomepage.dev/icon: rundeck.png
    gethomepage.dev/app: rundeck
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rundeck.test.local.hohepa.dev`)
      kind: Rule
      services:
        - name: rundeck
          port: 4440
  tls:
    secretName: test-local-hohepa-dev-tls
